--- a/mcidashboard/mcidashboard-front/src/css/machine_learning.css
+++ b/mcidashboard/mcidashboard-front/src/css/machine_learning.css
@@ -16,7 +16,7 @@
 }
 
 .ml-subtitle {
-    font-size: 22px;
+    font-size: 1.5rem;
     font-weight: 600;
 }
 
